--- a/package.json
+++ b/package.json
@@ -1,32 +1,29 @@
 {
-  "name": "interbit-docs",
-  "version": "0.4.31",
-  "description": "Interbit SDK",
-  "private": true,
+  "name": "gitbook-plugin-interbit",
+  "version": "0.0.1",
+  "description": "Provides artwork and tooling required to build/test Interbit documentation",
   "keywords": [
-    "interbit"
+    "interbit",
+    "gitbook",
+    "plugin",
+    "dictionary",
+    "hunspell"
   ],
-  "license": "MIT",
+  "license": "CC BY-NC-ND 4.0",
   "author": {
-    "name": "BTL"
+    "name": "Interbit"
   },
   "main": "README.md",
   "dependencies": {
     "ansi-escape-sequences": "^4.0.0",
     "bluebird": "^3.5.1",
-    "express": "4.15.2",
     "fs-extra-promise": "^1.0.1",
-    "gitbook-cli": "2.3.0",
-    "heroku-ssl-redirect": "0.0.4",
     "lodash": "^4.17.10",
     "nspell": "^2.0.1",
     "promisify-any": "^2.0.1"
   },
-  "scripts": {
-    "start": "node index.js",
-    "serve": "npm start",
-    "build": "bash package.sh",
-    "proof": "htmlproofer --allow-hash-href --empty-alt-ignore gitbook/_book",
-    "check": "scripts/doc_checks.js"
+  "gitbook": {
+    "properties": {
+    }
   }
 }
