--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "ansi-escape-sequences": "^4.0.0",
     "bluebird": "^3.5.1",
     "fs-extra-promise": "^1.0.1",
+    "image-size": "^0.6.3",
     "lodash": "^4.17.10",
+    "minimist": "^1.2.0",
     "nspell": "^2.0.1",
     "promisify-any": "^2.0.1",
-    "minimist": "^1.2.0",
     "walk-sync": "^0.3.2"
   },
   "engines": {
