--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ansi-escape-sequences": "^4.0.0",
     "bluebird": "^3.5.1",
     "capitalize": "^1.0.0",
+    "deepmerge": "^2.1.1",
     "fs-extra-promise": "^1.0.1",
     "image-size": "^0.6.3",
     "lodash": "^4.17.10",
